# infra-pic

./: .gitignore  README.md  pyproject.toml  spec.md
examples/: data-pipeline.yaml  microservices.yaml  terraform-plan.json  web-app.yaml
src/awsdiagram/: __init__.py  cli.py  errors.py  models.py  parser.py  renderer.py  resolver.py
src/awsdiagram/terraform/: __init__.py  importer.py  mappings.py
tests/: conftest.py  test_cli.py  test_models.py  test_parser.py  test_renderer.py  test_resolver.py  test_terraform_importer.py  test_terraform_mappings.py
